--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,8 @@ img {
     overflow: hidden;
 }
 
-/* Breadcrumb Navigation */
+
+/* breadcrumb navigation */
 .breadcrumb-items {
     list-style: none;
     padding-left: 24px;
@@ -77,7 +78,8 @@ img {
     color: var(--clr-charcoal);
 }
 
-/* Index page */
+
+/* index page */
 .newest-post .new-post h3 {
     width: auto;
     max-width: 300px;
@@ -154,7 +156,11 @@ img {
 
 .how-to {
     position: relative;
-    z-index: -2;
+    z-index: 0;
+}
+
+.how-to h2 {
+    z-index: -1;
 }
 
 .search {
@@ -163,7 +169,7 @@ img {
     right: 12px;
     width: 100px;
     filter: invert(100%) sepia(1%) saturate(983%) hue-rotate(262deg) brightness(116%) contrast(100%);
-    z-index: -1;
+    z-index: -2;
 }
 
 .how-to-posts {
@@ -253,7 +259,8 @@ img {
     }
 }
 
-/* Blog page */
+
+/* blog page */
 .large-posts {
     display: flex;
     flex-direction: column;
@@ -310,3 +317,6 @@ img {
     text-align: center;
     margin-block: var(--mgn-zero);
 }
+
+
+/* blogpost page */
